--- a/OpenPro.Admin/src/pages/index.astro
+++ b/OpenPro.Admin/src/pages/index.astro
@@ -1,11 +1,17 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import React from 'react';
+import ProviderCalendars from '../components/ProviderCalendars';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<div style="margin-bottom:24px">
+		<Welcome />
+	</div>
+	<!-- Mount React island for provider tabs and calendars -->
+	<ProviderCalendars client:load />
 </Layout>
